Resume is added and uploaded two projects...

--- a/index.html
+++ b/index.html
@@ -43,7 +43,9 @@
             </li>
         </ul>
         <button class="bg-white text-purple-500 py-1 px-3 hover:brightness-90">
-            Download Resume
+            <a href="./data/resume/My Resume.pdf" download="myResume">
+                Download Resume
+            </a>
         </button>
     </section>
 
@@ -175,18 +177,21 @@
             </li>
         </ul>
 
+        <!-- By Default : spring project  -->
         <div id="projects" class="flex flex-wrap justify-evenly">
             <div class="bg-purple-50 w-[350px] shadow-lg m-6">
                 <ul class="bg-pink-300 p-4 pb-0 flex rounded-xl">
-                    <li><img class="rounded-t-[10px] h-[340px] w-[320px]" src="./jpg/ss1.jpg" alt="project SS">
+                    <li><img class="rounded-t-[10px] h-[340px] w-[320px]"
+                            src="./jpg/project/smartContactManager/image.png" alt="project SS">
                     </li>
                 </ul>
                 <div class="px-8 py-4">
-                    <h3 class="font-bold text-xl mt-4">Project Name</h3>
-                    <p class="my-4">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quia natus beatae libero
-                        explicabo
-                        voluptatibus saepe.</p>
-                    <a class="border-b-[2px]  border-purple-500 pb-1 rounded-[4px]" href="#">
+                    <h3 class="font-bold text-xl mt-4">Smart Contact Manager</h3>
+                    <p class="my-4">A Smart Contact Manager developed using Spring Boot, MySQL, and Thymeleaf, designed
+                        to efficiently manage and organize contact information. It offers features for adding, updating,
+                        and deleting contacts with an intuitive user interface.</p>
+                    <a class="border-b-[2px]  border-purple-500 pb-1 rounded-[4px]"
+                        href="https://github.com/NeerajGupta23/smartContactManager">
                         <div class="inline font-medium relative top-[1px]">
                             Code
                         </div>
@@ -194,48 +199,6 @@
                     </a>
                 </div>
             </div>
-
-            <div class="bg-purple-50 w-[350px] shadow-lg m-6">
-                <ul class="bg-blue-300 p-4 pb-0 flex rounded-xl">
-                    <li><img class="rounded-t-[10px] h-[340px] w-[320px]" src="./jpg/ss2.png" alt="project SS">
-                    </li>
-                </ul>
-                <div class="px-8 py-4">
-                    <h3 class="font-bold text-xl mt-4">Project Name</h3>
-                    <p class="my-4">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quia natus beatae libero
-                        explicabo
-                        voluptatibus saepe.</p>
-                    <a class="border-b-[2px]  border-purple-500 pb-1 rounded-[4px]" href="#">
-                        <div class="inline font-medium relative top-[1px]">
-                            Code
-                        </div>
-                        <img class="inline" src="./svg/Link.svg" alt="click">
-                    </a>
-                </div>
-            </div>
-
-            <div class="bg-purple-50 w-[350px] shadow-lg m-6">
-                <ul class="bg-orange-300 p-4 pb-0 flex rounded-xl">
-                    <li><img class="rounded-t-[10px] h-[340px] w-[320px]" src="./jpg/ss2.png" alt="project SS">
-                    </li>
-                </ul>
-                <div class="px-8 py-4">
-                    <h3 class="font-bold text-xl mt-4">Project Name</h3>
-                    <p class="my-4">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quia natus beatae libero
-                        explicabo
-                        voluptatibus saepe.</p>
-                    <a class="border-b-[2px]  border-purple-500 pb-1 rounded-[4px]" href="#">
-                        <div class="inline font-medium relative top-[1px]">
-                            Code
-                        </div>
-                        <img class="inline" src="./svg/Link.svg" alt="click">
-                    </a>
-                </div>
-            </div>
-        </div>
-
-        <slide>
-        </slide>
     </section>
 
     <!-- Dividor  -->
@@ -308,7 +271,9 @@
             <div class="w-[20%] mx-auto my-8">
                 <button
                     class="text-white bg-purple-500 py-2 px-4 mx-auto rounded-lg font-bold text-lg hover:bg-gradient-to-r hover:from-purple-500 via-purple-500 hover:to-pink-400">
-                    Download Resume
+                    <a href="./data/resume/My Resume.pdf" download="myResume">
+                        Download Resume
+                    </a>
                 </button>
             </div>
         </div>
