Website is now little more responsive to smaller device

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     style="background-image: url(./svg/background3.svg); background-repeat: no-repeat; background-size: cover;">
 
     <!-- Navigation Section -->
-    <section class="my-2 mr-16 bg-gradient-to-r from-purple-900 to-purple-600 text-white 
+    <section class="max-[980px]:hidden my-2 mr-16 bg-gradient-to-r from-purple-900 to-purple-600 text-white 
                 p-4 rounded-br-[30px] rounded-tr-[10px] flex justify-around text-lg font-medium">
         <img src="./svg/work.svg" alt="Portfolio">
         <ul class="flex">
@@ -54,7 +54,7 @@
     <section
         class="bg-gradient-to-r from-purple-800 via-purple-500 to-purple-400 p-10 my-24 pt-6 mt-24 rounded-xl w-[95%] mx-auto shadow-lg">
         <ul
-            class="flex justify-between relative bottom-14 w-[20%] bg-green-100 p-2 border-[4px] border-green-500 rounded-md">
+            class="flex justify-between relative bottom-14 w-[200px] bg-green-100 p-2 border-[4px] border-green-500 rounded-md">
             <li><a target="_blank" href="https://www.linkedin.com/in/neeraj-kumar-523194283"><img
                         class="w-10 bg-orange-200 hover:bg-orange-500" src="./svg/linkedin.svg" alt="LinkedIn"></a>
             </li>
@@ -92,50 +92,50 @@
 
     <!-- My Skills  -->
     <section id="skills" class="p-8 m-12 mx-auto">
-        <h2 class="text-center mt-2 mb-8 font-bold text-6xl mx-auto">
+        <h2 class="text-center mt-2 mb-8 font-bold text-3xl md:text-6xl">
             My Skills</h2>
-        <ul class="flex justify-evenly flex-wrap w-[70%] mx-auto">
-            <li class="bg-purple-50 w-[14%] px-6 py-3 rounded-3xl shadow-md my-8 mx-14">
+        <ul class="flex justify-evenly flex-wrap max-w-[1100px] min-w-[100%] mx-auto">
+            <li class="bg-purple-50 min-w-[120px] max-w-[140px] px-6 py-3 rounded-3xl shadow-md my-8 mx-10">
                 <img class="max-w-[100%]" src="./svg/java.svg" alt="Java">
                 <div class="text-center my-2 font-medium">Java</div>
             </li>
-            <li class="bg-purple-50 w-[14%] px-6 py-3 rounded-3xl shadow-md my-8 mx-14">
+            <li class="bg-purple-50  min-w-[120px] max-w-[140px] px-6 py-3 rounded-3xl shadow-md my-8 mx-14">
                 <img class="max-w-[100%]" src="./svg/dsa.svg" alt="DSA">
                 <div class="text-center my-2 font-medium">DSA</div>
             </li>
-            <li class="bg-purple-50 w-[14%] px-6 py-3 rounded-3xl shadow-md my-8 mx-14">
+            <li class="bg-purple-50  min-w-[120px] max-w-[140px] px-6 py-3 rounded-3xl shadow-md my-8 mx-14">
                 <img class="" src="./svg/JDBC.svg" alt="JDBC">
                 <div class="text-center my-2 font-medium">JDBC</div>
             </li>
-            <li class="bg-purple-50 w-[14%] px-6 py-3 rounded-3xl shadow-md my-8 mx-14">
+            <li class="bg-purple-50  min-w-[120px] max-w-[140px] px-6 py-3 rounded-3xl shadow-md my-8 mx-14">
                 <img class="" src="./svg/servlet.svg" alt="Servlet">
                 <div class="text-center my-2 font-medium">Servlet</div>
             </li>
-            <li class="bg-purple-50 w-[14%] px-6 py-3 rounded-3xl shadow-md my-8 mx-14">
+            <li class="bg-purple-50  min-w-[120px] max-w-[140px] px-6 py-3 rounded-3xl shadow-md my-8 mx-14">
                 <img class="" src="./svg/hibernate.svg" alt="Hibernate">
                 <div class="text-center my-2 font-medium">Hibernate</div>
             </li>
-            <li class="bg-purple-50 w-[14%] px-6 py-3 rounded-3xl shadow-md my-8 mx-14">
+            <li class="bg-purple-50  min-w-[120px] max-w-[140px] px-6 py-3 rounded-3xl shadow-md my-8 mx-14">
                 <img class="" src="./svg/spring.svg" alt="Spring">
                 <div class="text-center my-2 font-medium">Spring</div>
             </li>
-            <li class="bg-purple-50 w-[14%] px-6 py-3 rounded-3xl shadow-md my-8 mx-14">
+            <li class="bg-purple-50  min-w-[120px] max-w-[140px] px-6 py-3 rounded-3xl shadow-md my-8 mx-14">
                 <img class="" src="./svg/html.svg" alt="HTML">
                 <div class="text-center my-2 font-medium">HTML</div>
             </li>
-            <li class="bg-purple-50 w-[14%] px-6 py-3 rounded-3xl shadow-md my-8 mx-14">
+            <li class="bg-purple-50  min-w-[120px] max-w-[140px] px-6 py-3 rounded-3xl shadow-md my-8 mx-14">
                 <img class="" src="./svg/css.svg" alt="CSS">
                 <div class="text-center my-2 font-medium">CSS</div>
             </li>
-            <li class="bg-purple-50 w-[14%] px-6 py-3 rounded-3xl shadow-md my-8 mx-14">
+            <li class="bg-purple-50 min-w-[120px] max-w-[140px] px-6 py-3 rounded-3xl shadow-md my-8 mx-14">
                 <img class="" src="./svg/tailwind.svg" alt="Tailwind CSS">
                 <div class="text-center my-2 font-medium">Tailwind CSS</div>
             </li>
-            <li class="bg-purple-50 w-[14%] px-6 py-3 rounded-3xl shadow-md my-8 mx-14">
+            <li class="bg-purple-50  min-w-[120px] max-w-[140px] px-6 py-3 rounded-3xl shadow-md my-8 mx-14">
                 <img class="" src="./svg/javascript.svg" alt="JavaScript">
                 <div class="text-center my-2 font-medium">JavaScript</div>
             </li>
-            <li class="bg-purple-50 w-[14%] px-6 py-3 rounded-3xl shadow-md my-8 mx-14">
+            <li class="bg-purple-50 min-w-[120px] max-w-[140px] px-6 py-3 rounded-3xl shadow-md my-8 mx-14">
                 <img class="" src="./svg/database.svg" alt="RDBMS">
                 <div class="text-center my-2 font-medium">RDBMS</div>
             </li>
@@ -150,47 +150,48 @@
     </div>
 
     <!-- Project Section  -->
-    <section id="prj" class="bg-white p-10 my-16 mx-24 rounded-xl">
-        <h2 class="text-center font-bold text-6xl">My Projects</h2>
-        <p class="text-center my-8 w-[50%] mx-auto">Discover my range of projects where I apply my skills in Java,
+    <section id="prj" class="bg-white p-5 min-[800px]:p-14 my-16 mx-auto rounded-xl min-[800px]:w-[80%] w-[95%] ">
+        <h2 class="text-center font-bold text-3xl md:text-6xl">My Projects</h2>
+        <p class="text-center my-8 mx-auto min-[800px]:px-52">Discover my range of projects where I apply my skills in
+            Java,
             Spring Boot, Thymeleaf, and React. These
             projects reflect my dedication to building practical and efficient solutions while continuously expanding my
             technical knowledge.</p>
-        <ul class="my-10 w-[46%] mx-auto flex justify-around">
+        <ul class="my-10 w-[50%] mx-auto flex justify-around flex-wrap">
             <li id="spring"
-                class="hover:border-x-[3px] hover:border-purple-700 cursor-pointer px-4 py-1 bg-purple-500 text-white rounded-md font-medium">
+                class="hover:border-x-[3px] hover:border-purple-700 cursor-pointer px-4 py-1 bg-purple-500 text-white rounded-md font-medium my-2 mx-1">
                 Spring</li>
             <li id="hibernate"
-                class="hover:border-x-[3px] hover:border-purple-700 cursor-pointer px-4 py-1 bg-purple-100 rounded-md font-medium">
+                class="hover:border-x-[3px] hover:border-purple-700 cursor-pointer px-4 py-1 bg-purple-100 rounded-md font-medium my-2 mx-1">
                 Hibernate
             </li>
             <li id="thymleaf"
-                class="hover:border-x-[3px] hover:border-purple-700 cursor-pointer px-4 py-1 bg-purple-100 rounded-md font-medium">
+                class="hover:border-x-[3px] hover:border-purple-700 cursor-pointer px-4 py-1 bg-purple-100 rounded-md font-medium my-2 mx-1">
                 Thymleaf
             </li>
             <li id="react"
-                class="hover:border-x-[3px] hover:border-purple-700 cursor-pointer px-4 py-1 bg-purple-100 rounded-md font-medium">
+                class="hover:border-x-[3px] hover:border-purple-700 cursor-pointer px-4 py-1 bg-purple-100 rounded-md font-medium my-2 mx-1">
                 React</li>
             <li id="servlet"
-                class="hover:border-x-[3px] hover:border-purple-700 cursor-pointer px-4 py-1 bg-purple-100 rounded-md font-medium">
+                class="hover:border-x-[3px] hover:border-purple-700 cursor-pointer px-4 py-1 bg-purple-100 rounded-md font-medium my-2 mx-1">
                 Servlet/Jsp
             </li>
         </ul>
 
         <!-- By Default : spring project  -->
-        <div id="projects" class="flex flex-wrap justify-evenly">
+        <div id="projects" class="flex flex-wrap justify-evenly w-[100%]">
             <div class="bg-purple-50 w-[350px] shadow-lg m-6">
                 <ul class="bg-pink-300 p-4 pb-0 flex rounded-xl">
                     <li><img class="rounded-t-[10px] h-[340px] w-[320px]"
                             src="./jpg/project/smartContactManager/image.png" alt="project SS">
                     </li>
                 </ul>
-                <div class="px-8 py-4">
+                <div class="px-4 py-4">
                     <h3 class="font-bold text-xl mt-4">Smart Contact Manager</h3>
                     <p class="my-4">A Smart Contact Manager developed using Spring Boot, MySQL, and Thymeleaf, designed
                         to efficiently manage and organize contact information. It offers features for adding, updating,
                         and deleting contacts with an intuitive user interface.</p>
-                    <a class="border-b-[2px]  border-purple-500 pb-1 rounded-[4px]"
+                    <a class="border-b-[2px]  border-purple-500 pb-1 rounded-[4px]" target="_blank"
                         href="https://github.com/NeerajGupta23/smartContactManager">
                         <div class="inline font-medium relative top-[1px]">
                             Code
@@ -210,25 +211,25 @@
 
     <!-- Contact Me  -->
     <section id="contact">
-        <h2 class="text-center font-bold text-6xl my-8">Contact Me</h2>
-        <ul type="disc" class=" w-[40%] mx-auto">
+        <h2 class="text-center font-bold text-3xl md:text-6xl my-8">Contact Me</h2>
+        <ul type="disc" class=" w-[100%] mx-auto">
             <li
-                class="flex justify-between bg-white border-l-[6px] border-purple-600 shadow-lg rounded-md px-6 py-3 my-14 w-[65%] mx-auto">
-                <img class="w-[10%]" src="./svg/mail.svg" alt="Mail Id">
+                class="flex justify-between bg-white border-l-[6px] border-purple-600 shadow-lg rounded-md px-6 py-3 my-14 min-w-[380px] max-w-[380px] mx-auto">
+                <img class="w-[10%] mr-6" src="./svg/mail.svg" alt="Mail Id">
                 <div class="font-medium text-2xl">230803neeraj@gmail.com</div>
             </li>
             <li
-                class="flex justify-between bg-white border-l-[6px] border-purple-600 shadow-lg rounded-md px-6 py-3 my-14 w-[40%] mx-auto">
-                <img class="w-[20%]" src="./svg/whatsapp.svg" alt="whatsapp number">
+                class="flex justify-between bg-white border-l-[6px] border-purple-600 shadow-lg rounded-md px-6 py-3 my-14 min-w-[280px] max-w-[280px] mx-auto">
+                <img class="w-[15%]" src="./svg/whatsapp.svg" alt="whatsapp number">
                 <div class="font-medium text-2xl">6261308292</div>
             </li>
             <li
-                class="flex justify-between bg-white border-l-[6px] border-purple-600 shadow-lg rounded-md px-6 py-3 my-14  w-[67%] mx-auto">
+                class="flex justify-between bg-white border-l-[6px] border-purple-600 shadow-lg rounded-md px-6 py-3 my-14 min-w-[400px] max-w-[400px] mx-auto">
                 <img class="w-[10%]" src="./svg/map.svg" alt="Location">
                 <div class="font-medium text-2xl">Bhilai Nagar, Chhattisgarsh</div>
             </li>
             <li
-                class="flex justify-between bg-white border-l-[6px] border-purple-600 shadow-lg rounded-md px-6 py-3 my-14 w-[50%] mx-auto">
+                class="flex justify-between bg-white border-l-[6px] border-purple-600 shadow-lg rounded-md px-6 py-3 my-14 min-w-[280px] max-w-[280px] mx-auto">
                 <img class="w-[15%]" src="./svg/mobile.svg" alt="Phone Number">
                 <div class="font-medium text-2xl">+91 6261308292</div>
             </li>
@@ -244,7 +245,7 @@
 
     <!-- About Me  -->
     <Section id="about" class="bg-white p-4 my-16 mx-24 rounded-xl">
-        <h2 class="text-center font-bold text-6xl my-8">About Me</h2>
+        <h2 class="text-center font-bold text-3xl md:text-6xl my-8">About Me</h2>
         <div class="w-[80%] mx-auto">
             <p
                 class="w-[80%] px-8 py-[15px] mx-auto text-justify leading-9 text-xl bg-gradient-to-r from-purple-200 to-pink-100 rounded-xl my-5 font-medium text-gray-700">
@@ -271,7 +272,7 @@
             <div class="w-[20%] mx-auto my-8">
                 <button
                     class="text-white bg-purple-500 py-2 px-4 mx-auto rounded-lg font-bold text-lg hover:bg-gradient-to-r hover:from-purple-500 via-purple-500 hover:to-pink-400">
-                    <a href="./data/resume/My Resume.pdf" download="myResume">
+                    <a href="./data/resume/My Resume.pdf" class="" download="myResume">
                         Download Resume
                     </a>
                 </button>
@@ -280,20 +281,20 @@
     </Section>
 
     <!-- Dividor  -->
-    <div class="flex shadow-xl">
+    <div class="w-[100%] flex shadow-xl">
         <div class="bg-gradient-to-r from-pink-400  via-green-400 to-orange-400 w-[100%] min-h-1"></div>
         <div class="bg-gradient-to-r from-orange-400  via-purple-400 to-red-400 w-[100%] min-h-1"></div>
         <div class="bg-gradient-to-r from-red-400  via-blue-400 to-pink-400 w-[100%] min-h-1"></div>
     </div>
 
     <!-- Ending Section -->
-    <section class="px-4 py-8 text-lg font-medium bg-gradient-to-r from-purple-900 to-purple-600 text-white">
+    <section class="px-4 py-8 md:px-0 text-lg font-medium bg-gradient-to-r from-purple-900 to-purple-600 text-white">
         <div class="flex justify-around ">
             <div>
                 <p>Created By</p>
-                <h2 class="text-3xl">Neeraj Kumar</h2>
+                <h2 class="text-3xl">Neeraj</h2>
             </div>
-            <ul class="flex pt-3 h-[50px]">
+            <ul class="flex pt-3 h-[50px] max-[980px]:hidden">
                 <li class="bg-purple-100 text-purple-700 hover:brightness-90 px-8 py-1 rounded-md mx-3">
                     <a href="#home">
                         Home
@@ -322,7 +323,7 @@
             </ul>
         </div>
         <hr class="my-8 w-[30%] mx-auto">
-        <div class="w-[10%] mx-auto">© Copyright 2024</div>
+        <div class="text-center">© Copyright 2024</div>
     </section>
 
     <!-- to load all these colors -->
