added more responsiveness to Contact me and about me section

--- a/index.html
+++ b/index.html
@@ -219,26 +219,26 @@
     <!-- Contact Me  -->
     <section id="contact">
         <h2 class="text-center font-bold text-3xl md:text-6xl my-8">Contact Me</h2>
-        <ul type="disc" class=" w-[100%] mx-auto">
+        <ul type="disc" class="p-2 w-[100%] mx-auto">
             <li
-                class="flex justify-between bg-white border-l-[6px] border-purple-600 shadow-lg rounded-md px-6 py-3 my-14 min-w-[380px] max-w-[380px] mx-auto">
+                class="flex justify-between bg-white border-l-[6px] border-purple-600 shadow-lg rounded-md px-6 py-3 my-14 min-w-[320px] max-w-[380px] mx-auto">
                 <img class="w-[10%] mr-6" src="./svg/mail.svg" alt="Mail Id">
-                <div class="font-medium text-2xl">230803neeraj@gmail.com</div>
+                <div class="font-medium text-2xl max-[500px]:text-lg">230803neeraj@gmail.com</div>
             </li>
             <li
                 class="flex justify-between bg-white border-l-[6px] border-purple-600 shadow-lg rounded-md px-6 py-3 my-14 min-w-[280px] max-w-[280px] mx-auto">
                 <img class="w-[15%]" src="./svg/whatsapp.svg" alt="whatsapp number">
-                <div class="font-medium text-2xl">6261308292</div>
+                <div class="font-medium text-2xl max-[500px]:text-lg">6261308292</div>
             </li>
             <li
-                class="flex justify-between bg-white border-l-[6px] border-purple-600 shadow-lg rounded-md px-6 py-3 my-14 min-w-[400px] max-w-[400px] mx-auto">
+                class="flex justify-between bg-white border-l-[6px] border-purple-600 shadow-lg rounded-md px-6 py-3 my-14 min-w-[320px] max-w-[400px] mx-auto">
                 <img class="w-[10%]" src="./svg/map.svg" alt="Location">
-                <div class="font-medium text-2xl">Bhilai Nagar, Chhattisgarsh</div>
+                <div class="font-medium text-2xl max-[500px]:text-lg">Bhilai Nagar, Chhattisgarsh</div>
             </li>
             <li
                 class="flex justify-between bg-white border-l-[6px] border-purple-600 shadow-lg rounded-md px-6 py-3 my-14 min-w-[280px] max-w-[280px] mx-auto">
                 <img class="w-[15%]" src="./svg/mobile.svg" alt="Phone Number">
-                <div class="font-medium text-2xl">+91 6261308292</div>
+                <div class="font-medium text-2xl max-[500px]:text-lg">+91 6261308292</div>
             </li>
         </ul>
     </section>
@@ -276,10 +276,10 @@
                 Structures and Algorithms allows me to design and implement efficient solutions. I am always eager
                 to
                 learn and apply new technologies to solve real-world problems.</p>
-            <div class="w-[20%] mx-auto my-8">
+            <div class="w-[20%] mx-auto my-8 flex flex-col items-center">
                 <button
-                    class="text-white bg-purple-500 py-2 px-4 mx-auto rounded-lg font-bold text-lg max-[600px]:text-base hover:bg-gradient-to-r hover:from-purple-500 via-purple-500 hover:to-pink-400">
-                    <a href="./data/resume/My Resume.pdf" class="" download="myResume">
+                    class="text-white bg-purple-500 py-2 px-4 rounded-lg font-bold text-lg  hover:bg-gradient-to-r hover:from-purple-500 via-purple-500 hover:to-pink-400">
+                    <a href="./data/resume/My Resume.pdf" class="max-[600px]:text-sm" download="myResume">
                         Download Resume
                     </a>
                 </button>
