added new skill React

--- a/index.html
+++ b/index.html
@@ -142,9 +142,13 @@
                 <img class="" src="./svg/javascript.svg" alt="JavaScript">
                 <div class="text-center my-2 font-medium">JavaScript</div>
             </li>
+            <li class="bg-purple-50  min-w-[120px] max-w-[140px] px-6 py-3 rounded-3xl shadow-md my-8 mx-14">
+                <img class="" src="./svg/react.svg" alt="JavaScript">
+                <div class="text-center my-2 font-medium">React</div>
+            </li>
             <li class="bg-purple-50 min-w-[120px] max-w-[140px] px-6 py-3 rounded-3xl shadow-md my-8 mx-14">
                 <img class="" src="./svg/database.svg" alt="RDBMS">
-                <div class="text-center my-2 font-medium">RDBMS</div>
+                <div class="text-center my-2 font-medium">MySQL</div>
             </li>
         </ul>
     </section>
