added new project

--- a/index.html
+++ b/index.html
@@ -211,6 +211,28 @@
                     </a>
                 </div>
             </div>
+            <div class="bg-purple-50 w-[350px] shadow-lg m-6">
+                <ul class="bg-pink-300 p-4 pb-0 flex rounded-xl">
+                    <li><img class="rounded-t-[10px] h-[340px] w-[320px]" src="./jpg/project/ExamPortal/image.png"
+                            alt="project SS">
+                    </li>
+                </ul>
+                <div class="px-4 py-4">
+                    <h3 class="font-bold text-xl mt-4">Exam Portal</h3>
+                    <p class="my-4">The Exam Portal is a web application developed using Spring Boot, MySQL, and
+                        Angular, designed to automate the process of creating, managing, and grading exams. It gives a
+                        user-friendly interface for administrators, instructors, and students, enhancing efficiency,
+                        accessibility, and security in the examination process.</p>
+                    <a class="border-b-[2px]  border-purple-500 pb-1 rounded-[4px]" target="_blank"
+                        href="https://github.com/NeerajGupta23/Exam-Portal">
+                        <div class="inline font-medium relative top-[1px]">
+                            Code
+                        </div>
+                        <img class="inline" src="./svg/Link.svg" alt="click">
+                    </a>
+                </div>
+            </div>
+        </div>
     </section>
 
     <!-- Dividor  -->
