Changed the default color of one project

--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
                 </div>
             </div>
             <div class="bg-purple-50 w-[350px] shadow-lg m-6">
-                <ul class="bg-pink-300 p-4 pb-0 flex rounded-xl">
+                <ul class="bg-orange-300 p-4 pb-0 flex rounded-xl">
                     <li><img class="rounded-t-[10px] h-[340px] w-[320px]" src="./jpg/project/ExamPortal/image.png"
                             alt="project SS">
                     </li>
